flux/manifests/picoshare/picoshare-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: picoshare
  namespace: picoshare
spec:
  selector:
    app: picoshare
  type: ClusterIP
  ports:
  - name: picoshare
    protocol: TCP
    port: 4001
    targetPort: 4001
